instalacion boostrap - seteo de container wrap en index

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--libreria boostrap-->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!--mi css-->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <div class="container-fluid">
     <!--Aca empeiza el header-->
     <header class="header">
         <div class="header__div--logo">            
@@ -63,5 +67,8 @@
             <p>BrainIT 2022 - Todos los derechos reservados</p>
         </div>          
     </footer>
+    </div>
+<!--Script de boostrap-->
+<script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
