--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--libreria boostrap-->
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <!--mi css-->
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -56,5 +59,7 @@
             <p>BrainIT 2022 - Todos los derechos reservados</p>
         </div>          
     </footer>
+<!--Script de boostrap-->
+<script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
