--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--boostrap-->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!--estilos propios-->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -74,5 +77,6 @@
         </div>          
     </footer>
     </div>
+<script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
