--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <!--boostrap-->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!--estilos propios-->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="contenedorPrincipal__venta">
@@ -61,5 +64,6 @@
         </div>          
     </footer>
     </div>
+<script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
