--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <!--boostrap-->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!--estilos propios-->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="header">
@@ -78,5 +81,6 @@
             <p>BrainIT 2022 - Todos los derechos reservados</p>
         </div>          
     </footer>
+<script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
