Formulario Boostrap terminado

--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -33,17 +33,19 @@
         <h2>Motos en Venta</h2>
     </div>
     <section class="contenedor__cards">
-        <div class="ventaMotos__card">
+        <div class="card ventaMotos__card">
             <h2>Honda CB400</h2>
             <img src="../images/hondaCb400.JPG" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
             molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
+            <a href="#" class="btn btn-light">Ver</a>
         </div>
         <div class="ventaMotos__card">
             <h2>Suzuki GS750</h2>
             <img src="../images/suzukiGs750.JPG" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
             molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
+            <a href="#" class="btn btn-light">Ver</a>
         </div>
     </section>
 
