--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,47 +31,35 @@
    
     <div class="estilo__seccion">
         <section>
-            <h2>Contacto</h2>
+            <h2>Formulario de contacto</h2>
             <p> +598 000 000
                 mail@kku.uy</p>
         </section>
         <section>         
             <form>
-                <div class="row mb-3">
-                    <label for="inputName" class="col-sm-2 estilo__contacto">Nombre</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputName">
+                <div class="row">
+                    <div class="col estilo__contacto">
+                      <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
                     </div>
-                  </div>
-                <div class="row mb-3">
-                    <label for="inputApellido" class="col-sm-2 estilo__contacto">Apellido</label>
-                    <div class="col-sm-10">
-                      <input type="text" class="form-control" id="inputApellido">
+                    <div class="col estilo__contacto">
+                      <input type="email" class="form-control" placeholder="Correo electrónico" aria-label="mail">
                     </div>
                 </div>
-                <div class="row mb-3">
-                  <label for="inputEmail3" class="col-sm-2 estilo__contacto">Telefono</label>
-                  <div class="col-sm-10">
-                    <input type="number" class="form-control" id="inputEmail3" name="Telefono" placeholder="+(código país) - Número" title="Por favor ingresa solo números">
-                  </div>
+                <div class="row">
+                    <div class="col estilo__contacto">
+                      <input type="number" class="form-control" placeholder="Telefono" aria-label="Telefono" title="Por favor ingresa solo números">
+                    </div>                    
+                    <div class="col estilo__contacto">
+                        <input type="text" class="form-control" placeholder="Asunto" aria-label="asunto">
+                    </div>
                 </div>
-                <div class="row mb-3">
-                  <label for="inputMail" class="col-sm-2 estilo__contacto">Correo Eléctronico</label>
-                  <div class="col-sm-10">
-                    <input class="form-control" id="inputMail" type="email" name="email">
-                  </div>
-                </div>
-                <div>
-                    <label class="estilo__contacto" for="adheridoKKU">Aderido al plan KKU Lifestile</label>
-                    <input type="radio" name="rbutSi">Si
-                    <input type="radio" name="rbutNo">No 
+                <div class="row estilo__contacto">
+                    <textarea class="form-control" name="mensaje" placeholder="Mensaje"></textarea>
                 </div>
                 <div>
-                    <label class="estilo__contacto" for="mensaje">Mensaje:</label>
-                    <textarea class="estilo__contacto" name="mensaje" placeholder="Escribenos aquí tu mensaje" cols="30" rows="10"></textarea>
+                    <button type="submit" class="btn btn-outline-dark" name="enviarForm"><img src="../images/done_black_36dp.svg" alt=""></button>
+                    <button type="reset" class="btn btn-outline-dark" name="limpiarForm"><img src="../images/delete_outline_black_36dp.svg" alt=""></button>
                 </div>
-                <button type="submit" class="btn btn-primary" name="enviarForm">Enviar</button>
-                <button type="reset" class="btn btn-primary" name="limpiarForm">Restablecer</button>
             </form>
         </section>
     </div>
