agregados iconos a botones de form y cards de motos

--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -38,7 +38,7 @@
             <img src="../images/hondaCb400.JPG" alt="">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
             molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-            <a href="#" class="btn btn-light">Ver</a>
+            <a href="#" class="btn"><img src="../images/info_outline_white_36dp.svg" alt=""></a>
         </div>
         <div class="ventaMotos__card">
             <h2>Suzuki GS750</h2>
