--- a/index.html
+++ b/index.html
@@ -13,22 +13,34 @@
 <body>
     <div class="contenedorPrincipal__Index">
     <!--Aca empeiza el header-->
-    <header class="header">
-        <div class="header__div--logo">            
-            <a href="index.html"><img src="images/logo_chico.JPG" alt="logo chico" title="logo chico"></a>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/nosotros.html">Nosotros</a></li>
-                <li><a href="pages/bikes_for_sale.html">Bikes for sale</a></li>
-                <li><a href="pages/kkulifestile.html">KKU lifestile</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav> 
-        <div class="header__div--carrito">            
-            <a href="pages/bikes_for_sale.html"><img src="images/carrito.JPG" alt="carrito" title="carrito"></a>
-        </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><img src="images/logo_chico.JPG" alt=""></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="pages/nosotros.html">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="pages/bikes_for_sale.html">Bikes For Sale</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="pages/kkulifestile.html">KKU Lifestile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     
     <section class="estilo__seccion1">
