--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -11,61 +11,73 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <div class="contenedorPrincipal__venta">
-    <header class="header">
-        <div class="header__div--logo">            
-            <a href="../index.html"><img src="../images/logo_chico.JPG" alt="logo chico" title="logo chico"></a>
+    <div>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div class="estilo__seccion">
+            <h2>Motos en Venta</h2>
         </div>
-        <nav class="header__div--nav">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="bikes_for_sale.html">Bikes for sale</a></li>
-                <li><a href="kkulifestile.html">KKU lifestile</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav> 
-        <div class="header__div--carrito">            
-            <a href="../pages/bikes_for_sale.html"><img src="../images/carrito.JPG" alt="carrito" title="carrito"></a>
-        </div>
-    </header> 
-    <div class="estilo__seccion">
-        <h2>Motos en Venta</h2>
-    </div>
-    <section class="contenedor__cards">
-        <div class="card ventaMotos__card">
-            <h2>Honda CB400</h2>
-            <img src="../images/hondaCb400.JPG" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
-            molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-            <a href="#" class="btn"><img src="../images/info_outline_white_36dp.svg" alt=""></a>
-        </div>
-        <div class="ventaMotos__card">
-            <h2>Suzuki GS750</h2>
-            <img src="../images/suzukiGs750.JPG" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
-            molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
-            <a href="#" class="btn btn-light">Ver</a>
-        </div>
-    </section>
-
-    <footer class="footer">
-        <div class="footer__izq">
-            <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
-            <p>mail@kku.uy - +598 000 000</p>
-            <div>                
-                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
-                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+        <section class="contenedor__cards">
+            <div class="card ventaMotos__card">
+                <h2>Honda CB400</h2>
+                <img src="../images/hondaCb400.JPG" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
+                molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
+                <a href="#" class="btn"><img src="../images/info_outline_white_36dp.svg" alt=""></a>
             </div>
-        </div>
-        <div>
-            <img class="footer__logo" src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-        </div>
-        <div class="footer__der">
-            <p>BrainIT 2022 - Todos los derechos reservados</p>
-        </div>          
-    </footer>
+            <div class="ventaMotos__card">
+                <h2>Suzuki GS750</h2>
+                <img src="../images/suzukiGs750.JPG" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio et provident exercitationem esse asperiores neque non itaque sapiente, 
+                molestias atque explicabo quo, ipsum dolor soluta labore fuga nostrum ad debitis.</p>
+                <a href="#" class="btn btn-light">Ver</a>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="footer__izq">
+                <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
+                <p>mail@kku.uy - +598 000 000</p>
+                <div>                
+                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
+                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+                </div>
+            </div>
+            <div>
+                <img class="footer__logo" src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            </div>
+            <div class="footer__der">
+                <p>BrainIT 2022 - Todos los derechos reservados</p>
+            </div>          
+        </footer>
     </div>
-<script src="js/bootstrap.bundle.js"></script>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
