--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,73 +11,86 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <header class="header">
-        <div class="header__div--logo">            
-            <a href="../index.html"><img src="../images/logo_chico.JPG" alt="logo chico" title="logo chico"></a>
-        </div>
-        <nav class="header__div--nav">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="bikes_for_sale.html">Bikes for sale</a></li>
-                <li><a href="kkulifestile.html">KKU lifestile</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav> 
-        <div class="header__div--carrito">            
-            <a href="../pages/bikes_for_sale.html"><img src="../images/carrito.JPG" alt="carrito" title="carrito"></a>
-        </div>
-    </header> 
+    <div>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
    
-    <div class="estilo__seccion">
-        <section>
-            <h2>Formulario de contacto</h2>
-        </section>
-        <section>         
-            <form>
-                <div class="row">
-                    <div class="col estilo__contacto">
-                      <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
+        <div class="estilo__seccion">
+            <section>
+                <h2>Formulario de contacto</h2>
+            </section>
+            <section>         
+                <form>
+                    <div class="row">
+                        <div class="col estilo__contacto">
+                            <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
+                        </div>
+                        <div class="col estilo__contacto">
+                            <input type="email" class="form-control" placeholder="Correo electrónico" aria-label="mail">
+                        </div>
                     </div>
-                    <div class="col estilo__contacto">
-                      <input type="email" class="form-control" placeholder="Correo electrónico" aria-label="mail">
+                    <div class="row">
+                        <div class="col estilo__contacto">
+                            <input type="number" class="form-control" placeholder="Telefono" aria-label="Telefono" title="Por favor ingresa solo números">
+                        </div>                    
+                        <div class="col estilo__contacto">
+                            <input type="text" class="form-control" placeholder="Asunto" aria-label="asunto">
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col estilo__contacto">
-                      <input type="number" class="form-control" placeholder="Telefono" aria-label="Telefono" title="Por favor ingresa solo números">
-                    </div>                    
-                    <div class="col estilo__contacto">
-                        <input type="text" class="form-control" placeholder="Asunto" aria-label="asunto">
+                    <div class="row estilo__contacto">
+                        <textarea class="form-control" name="mensaje" placeholder="Mensaje"></textarea>
                     </div>
-                </div>
-                <div class="row estilo__contacto">
-                    <textarea class="form-control" name="mensaje" placeholder="Mensaje"></textarea>
-                </div>
-                <div>
-                    <button type="submit" class="btn btn-outline-dark" name="enviarForm"><img src="../images/done_black_36dp.svg" alt=""></button>
-                    <button type="reset" class="btn btn-outline-dark" name="limpiarForm"><img src="../images/delete_outline_black_36dp.svg" alt=""></button>
-                </div>
-            </form>
-        </section>
+                    <div>
+                        <button type="submit" class="btn btn-outline-dark" name="enviarForm"><img src="../images/done_black_36dp.svg" alt=""></button>
+                        <button type="reset" class="btn btn-outline-dark" name="limpiarForm"><img src="../images/delete_outline_black_36dp.svg" alt=""></button>
+                    </div>
+                </form>
+            </section>
+        </div>    
     </div>
-
-    <footer class="footer">
-        <div class="footer__izq">
-            <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
-            <p>mail@kku.uy - +598 000 000</p>
-            <div>                
-                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
-                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+        <footer class="footer">
+            <div class="footer__izq">
+                <a class="footer__izq--a" href="../pages/contacto.html">Contacto</a>
+                    <p>mail@kku.uy - +598 000 000</p>
+                <div>                
+                    <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="../images/logoinsta.JPG" alt=""></a>
+                    <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="../images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+                </div>
             </div>
-        </div>
-        <div>
-            <img class="footer__logo" src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
-        </div>
-        <div class="footer__der">
-            <p>BrainIT 2022 - Todos los derechos reservados</p>
-        </div>          
-    </footer>
-<script src="js/bootstrap.bundle.js"></script>
+            <div>
+                <img class="footer__logo" src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            </div>
+            <div class="footer__der">
+                <p>BrainIT 2022 - Todos los derechos reservados</p>
+            </div>          
+        </footer>
+    <script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
