header nav estilizado, se agrega img-fluid a imagenes, agregado logo transparente en footer y home

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="contenedorPrincipal__Index">
     <!--Aca empeiza el header-->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+        <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-transparent">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_chico.JPG" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <ul class="fs-4 navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
@@ -43,16 +43,16 @@
         </nav>
     </header>
     
-    <section class="estilo__seccion1">
-        <img src="images/logo_cuadrado.JPG" alt="logo cuadrado" title="logo cuadrado">
+    <section class="estilo__seccion">
+        <img class="img-fluid" src="images/logo_redondo.png" alt="logo cuadrado" title="logo cuadrado">
         <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
         <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p>
         <hr>
     </section>    
     
-    <section class="estilo__seccion2">
+    <section class="estilo__seccion">
         <a href="pages/nosotros.html#nuestrosProyectos"><h2>Custom Bikes</h2></a>
-        <img src="images/hondacgl.JPG" alt="carrete deslizable" title="carrete deslizable">
+        <img class="img-fluid" src="images/hondacgl.JPG" alt="carrete deslizable" title="carrete deslizable">
         <h2>Honda CGL 125</h2>
         <p>
             Desarmamos las ruedas y cambiamos los aros por unos más anchos para ponerle cubiertas de mayor rodado,
@@ -62,7 +62,7 @@
         </p>
         <hr>
     </section>
-    <section class="estilo__seccion3">
+    <section class="estilo__seccion">
         <h2><a href="pages/nosotros.html">Nosotros</a></h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lSbXSUFiV4g?start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>
@@ -82,7 +82,7 @@
             </div>
         </div>
         <div>
-            <img class="footer__logo" src="images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            <img class="footer__logo" src="images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
         </div>
         <div class="footer__der">
             <p>BrainIT 2022 - Todos los derechos reservados</p>
