--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,14 +13,14 @@
 <body>
     <div>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <ul class="fs-4 navbar-nav m-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                             </li>
@@ -85,7 +85,7 @@
                 </div>
             </div>
             <div>
-                <img class="footer__logo" src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+                <img class="footer__logo" src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
             </div>
             <div class="footer__der">
                 <p>BrainIT 2022 - Todos los derechos reservados</p>
