--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,14 +13,14 @@
 <body>
     <div class="contenedorPrincipal">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-transparent">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <ul class="fs-4 navbar-nav m-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                             </li>
@@ -44,8 +44,8 @@
     <div>        
         <section class="estilo__seccion">
             <h2>Nuestras Instalaciones</h2>
-            <img src="../images/kkutaller1.JPG" alt="imagen taller 1" title="imagen taller1">
-            <img src="../images/kkutaller2.JPG" alt="imagen taller 2" title="imagen taller2">
+            <img class="img-fluid" src="../images/kkutaller1.JPG" alt="imagen taller 1" title="imagen taller1">
+            <img class="img-fluid" src="../images/kkutaller2.JPG" alt="imagen taller 2" title="imagen taller2">
             <p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat nihil nemo dolorum quo, 
                 alias nobis nesciunt doloribus voluptatem modi obcaecati ipsam ex suscipit, expedita facilis 
@@ -57,7 +57,7 @@
         <section class="estilo__seccion">
             <h2 id="nuestrosProyectos">Nuestros Proyectos</h2>
             <h2>BMW R1150</h2>
-            <img src="../images/bmw1200.JPG" alt="bmw1200" title="bmw1200">
+            <img class="img-fluid" src="../images/bmw1200.JPG" alt="bmw1200" title="bmw1200">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/yuBWLu2IMEA?start=15" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem accusantium sed reiciendis 
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div>
-            <img class="footer__logo" src="../images/logo_cuadrado.JPG" alt="kku footer" title="kku footer">
+            <img class="footer__logo" src="../images/logo_triangulo_blanco.png" alt="kku footer" title="kku footer">
         </div>
         <div class="footer__der">
             <p>BrainIT 2022 - Todos los derechos reservados</p>
