estilizado index en columnas

--- a/pages/kkulifestile.html
+++ b/pages/kkulifestile.html
@@ -42,7 +42,7 @@
             </nav>
         </header> 
    
-    <section class="estilo__seccion1">
+    <section class="estilo__seccion">
         <div>
             <h2>KKU Lifestyle</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo asperiores fugit similique sequi corrupti. 
@@ -50,7 +50,7 @@
         </div>
         <hr>
     </section>
-    <section class="estilo__seccion2">        
+    <section class="estilo__seccion">        
         <div class="estilo__imagen">
             <h2>Eventos & Rides</h2>
             <img src="../images/eventos&rides.JPG" alt="">
@@ -59,7 +59,7 @@
         </div>
         <hr>
     </section>
-    <section class="estilo__seccion3">
+    <section class="estilo__seccion">
         <h2>Proximos Eventos</h2>
         <iframe src="https://calendar.google.com/calendar/embed?src=es.uy%23holiday%40group.v.calendar.google.com&ctz=America%2FMontevideo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </section>
