video de fondo agregado a section en index

--- a/index.html
+++ b/index.html
@@ -42,12 +42,23 @@
             </div>
         </nav>
     </header>
-    <section class="col estilo__seccion">
-        <img class="img-fluid" src="images/logo_redondo.png" alt="logo cuadrado" title="logo cuadrado">
-        <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
-        <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p>
-    </section>    
-    
+    <section class="col estilo__seccion seccion__video">
+        <div class="seccion__overlay"></div>
+            <!-- The HTML5 video element that will create the background video on the header -->
+            <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                <source src="video/VID-20220421-WA0102.mp4" type="video/mp4">
+            </video>
+            <!-- The header content -->
+            <div class="seccion__container h-100">
+            <div class="d-flex h-100 text-center align-items-center">
+                <div class="w-100 text-white">
+                    <img class="img-fluid" src="images/logo_redondo_clanco.png" alt="logo cuadrado" title="logo cuadrado">
+                    <h1>Bienvenidos a Kustom Kulture Motorcycles</h1>
+                    <p>El buen gusto y el amor por los motores, se funden bajo tierra para hacer las mejores motos de la ciudad.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="row estilo__seccion">        
         <a href="pages/nosotros.html#nuestrosProyectos"><h2>Custom Bikes</h2></a>
         <div class="col-sm-12 col-md-6 col-lg-6">
