--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
 <body>
     <div>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-transparent">
+            <nav class="navbar navbar-expand-lg navbar-expand-md bg-black">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="../index.html"><img src="../images/logo_chico.JPG" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,19 +22,19 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="fs-4 navbar-nav m-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                <a class="text-white nav-link active" aria-current="page" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
+                                <a class="text-white nav-link active" aria-current="page" href="nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
+                                <a class="text-white nav-link active" aria-current="page" href="bikes_for_sale.html">Bikes For Sale</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
+                                <a class="text-white nav-link active" aria-current="page" href="kkulifestile.html">KKU Lifestile</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+                                <a class="text-white nav-link active" aria-current="page" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
