--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <!--boostrap-->
     <link rel="stylesheet" href="../css/bootstrap.css">
     <!--estilos propios-->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/estilos_scss.css">
 </head>
 <body>
     <div>
