--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Taller de customizacion/personalizacion de motos, chopper, cafe racer, chopper">
+    <meta name="keywords" content="MOTOS, CUSTOM, HARLEY DAVIDSON, CAFE RACER, BOOBER, CHOPPER, TALLER MOTOS, TALLER MECANICO, MOTO PERSONALIZADA">
     <!--boostrap-->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
