--- a/pages/bikes_for_sale.html
+++ b/pages/bikes_for_sale.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>KKU - Bikes for Sale</title>
+    <title>KKU Bikes for Sale</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
