--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--estilos propios-->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/estilos_scss.css">
 </head>
 <body>
 <div>
@@ -102,8 +103,8 @@
             <a class="footer__izq--a" href="pages/contacto.html">Contacto</a>
             <p>mail@kku.uy - +598 000 000</p>
             <div>                
-                <a href="https://www.instagram.com/kustomkultureuruguay/"><img src="images/logoinsta.JPG" alt=""></a>
-                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img src="images/logofacebook.JPG" alt="facebook footer" title="facebook footer"></a>
+                <a href="https://www.instagram.com/kustomkultureuruguay/"><img class="red--instagram" src="images/instagram-brands.svg" alt=""></a>
+                <a href="https://www.facebook.com/kustomkulturemotorcycles"><img class="red--facebook" src="images/facebook-brands.svg" alt="facebook footer" title="facebook footer"></a>
             </div>
         </div>
         <div>
